fgdiag (0.1.11) debian; urgency=low

  * added lessdisks-cloner and related files
  * added smart, dd and OS installation to disk testing

 -- Martin Chase <mchase@freegeek.org>  Wed, 22 Aug 2007 12:43:37 -0700

fgdiag (0.1.10) debian; urgency=low

  * drop support for database 

 -- Vagrant Cascadian <vagrant@freegeek.org>  Sat, 11 Aug 2007 17:47:48 -0700

fgdiag (0.1.9) debian; urgency=low

  * rebuild for etch
    - drop versioned python dependencies
  * set coders as maintainer, add vagrant and martin as uploaders

 -- Vagrant Cascadian <vagrant@freegeek.org>  Sat, 11 Aug 2007 15:16:24 -0700

fgdiag (0.1.8) unstable; urgency=low

  [ Vagrant Cascadian ]
  * generate man pages again
  * build for python2.2

 -- Vagrant Cascadian <vagrant@freegeek.org>  Sat, 11 Feb 2006 18:29:58 -0800

fgdiag (0.1.7) unstable; urgency=low

  [ Martin Chase]
  * made to work with sarge (not woody)

  [ Vagrant Cascadian ]
  * make package build on sarge
    - switch to cdbs
    - drop man page generation (hopefully only temporarily)

 -- Vagrant Cascadian <vagrant@freegeek.org>  Sat, 11 Feb 2006 17:14:40 -0800

fgdiag (0.1.6) unstable; urgency=low

  * CVS tag Version_0_1_6

 --  <stillflame@raw.freegeek.org>  Tue,  8 Mar 2005 20:17:26 -0800

fgdiag (0.1.5) unstable; urgency=low

  * CVS tag Version_0_1_5

 --  <rfs@sempai.freegeek.org>  Tue, 16 Nov 2004 21:29:36 -0800

fgdiag (0.1.4) unstable; urgency=low

  * CVS tag Version_0_1_4

 -- Kevin Turner <kevin@freegeek.org>  Tue, 16 Nov 2004 21:11:10 -0800

fgdiag (0.1.3) unstable; urgency=low

  * CVS tag Version_0_1_3

 -- Kevin Turner <kevin@freegeek.org>  Tue, 16 Nov 2004 21:03:53 -0800

fgdiag (0.1.2) unstable; urgency=low

  * CVS tag Version_0_1_2

 -- Kevin Turner <kevin@freegeek.org>  Tue, 16 Nov 2004 20:52:47 -0800

fgdiag (0.1.1) unstable; urgency=low

  * CVS tag Version_0_1_1

 -- Kevin Turner <kevin@freegeek.org>  Sat, 23 Oct 2004 18:39:27 -0700

fgdiag (0.1.0) unstable; urgency=low

  * Initial Release.
