@@ -1,0 +1,25 @@
+# directory where prototype clones are stored on the server...
+clonepath="/usr/local/clones"
+
+# options to be passed to rsync, -a for archive, -H to preserve hard-links..
+# -z for compression.... man rsync for details...
+rsyncopts=" -avHR --progress "
+
+# additional options to pass to ssh, such as a keyfile for updating
+#sshopts="-i somespecialkey"
+
+# additional files to back up?
+BACKUP_FILES="
+etc/X11/xorg.conf
+etc/X11/XF86Config
+etc/X11/XF86Config-4
+etc/X11/X
+etc/sysconfig/hwconf
+etc/sysconfig/soundcard
+etc/modules
+etc/modules.conf
+etc/fstab
+etc/modutils/sndconfig
+dev/mouse
+dev/modem
+"
