@@ -1,0 +1,36 @@
+# default partitioning schemes
+
+# TODO support more than four disk partitions on each disk
+# TODO ability to define a partition type only once (swap,root)
+# TODO free/empty/unpartitioned partition type
+
+#diskN_P where N is the disk(order is like grub), and P is the partition
+#number (may not directly translate to linux partition types)
+# "mount" is the mount point
+# "fstype" is the filesystem type, must have writeable linux support to
+# work
+# "type" determines mount options: choices are normal, boot, root, swap
+# "min" is minimum partition size
+# "max" is maximum partition size, 
+# sizes are in megabytes by default, or a multiple of the
+# memory size (Nmem). "remainder" is space left when other
+# partitions have been allocated a size.
+
+#TODO change to match grub exactly hd0,0 hd0,1 hd1,0
+
+#dsk_part mount fstype type	min	max
+disk0_0	/boot	ext3	boot	100	100
+disk0_1 none	swap	swap	512	512	
+disk0_2 /	ext3	root	500	remaining
+
+disk1_0 /home	ext3	normal	500	remaining
+
+disk2_0 /usr	ext3	normal	500	remaining
+
+disk3_0 /var	ext3	normal 500	remaining
+
+floppy0	/floppy auto floppy
+
+cdrom0	/cdrom	iso9660	cdrom
+
+proc	/proc	proc	proc
