@@ -1,9 +1,10 @@
 fgdiag (0.1.11) debian; urgency=low
 
   * added lessdisks-cloner and related files
+  * removed the 'lessdisks-' from the name
   * added smart, dd and OS installation to disk testing
 
- -- Martin Chase <mchase@freegeek.org>  Wed, 22 Aug 2007 12:43:37 -0700
+ -- Martin Chase <mchase@freegeek.org>  Tue, 28 Aug 2007 12:25:45 -0700
 
 fgdiag (0.1.10) debian; urgency=low
 
